# get-pixivpy-token

./: .dockerrignore  .gitignore  .hadolint.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  cspell.json  gppt.html  index.html  mise.toml  mypy.ini  pyproject.toml  requirements.txt  search.js  setup.cfg  setup.py  setup.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
gppt/: __init__.py  _selenium.py  auth.py  consts.py  gppt.py  login_response_types.py  main.py  model_types.py  selenium.py  utils.py
tests/: test_gppt.py  test_setup_browser.py
