[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "gppt"
version = "4.1.0"
description = "Get your Pixiv token (for running upbit/pixivpy)"
readme = "README.md"
keywords = [
  "api",
  "pixiv",
  "token",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "pixivpy3>=3.7.5,<4",
  "pwinput>=1.0.3,<2",
  "requests>=2.32.3,<3",
  "selenium>=4.27.1,<5",
]
urls.Repository = "https://github.com/eggplants/get-pixivpy-token"
scripts.gppt = "gppt.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "gppt" },
]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.15"
pre-commit = ">=2.20,<4.0"
taskipy = "^1.10.3"
types-requests = "^2.28.11.15"
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<6"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py39',
]

[tool.ruff]
line-length = 120

lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101",
  "D",
]

lint.per-file-ignores."gppt/auth.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."gppt/main.py" = [
  "T201", # `print` found
  "T203", # `pprint` found
]

[tool.mypy]
pretty = true
python_version = "3.8"
show_error_codes = true
strict = true

[tool.taskipy.tasks]
test = "pytest --cov=gppt --cov-report=term"
"test:html" = "task test --cov-report=html && open htmlcov/index.html"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
