[metadata]
name = gppt
version = attr: gppt.__version__
description = Get your Pixiv token (for running upbit/pixivpy)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/get-pixivpy-token
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    pixivpy3==3.7.2
    pwinput==1.0.2
    pyderman==3.3.0
    requests==2.28.2
    selenium==4.8.0
    types-requests==2.28.11.8
    types-selenium==3.141.9
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    gppt = gppt.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    pre-commit
    setuptools>=46.4.0
    wheel

[options.package_data]
gppt = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
